--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -95,116 +95,6 @@
             <div class="intro">
                 <h2 class="animate-this">{% trans 'Products' %}</h2>
             </div>
-
-
-            <div class="row row-no-gutter">
-                <div class="resp-tabs" style="display: block; width: 100%;">
-                    <div class="resp-tabs-container">
-
-                        <div class="gallery resp-tab-content resp-tab-content-active" aria-labelledby="tab_item-0"
-                             style="display:block">
-                            <!--gallery-->
-                            <div class="col-md-4 col-sm-12 border-right">
-
-                                <div class="gallery-skin border-bottom">
-                                    <a class="thumb"
-                                       href="#"
-                                       data-gallery="5">
-                                        <img src="{% static 'images/catalog/starter_1.png' %}" alt="">
-                                        <span class="thumb_overlay"></span>
-                                        <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>{% trans 'STARTERS' %}</span>
-                                            </p>
-                                        </div>
-                                    </a>
-                                </div>
-
-                                <div class="gallery-skin border-bottom">
-                                    <a class="thumb"
-                                       href="#"
-                                       data-gallery="5">
-                                        <img src="{% static 'images/catalog/stoyka_1.png' %}" alt="">
-                                        <span class="thumb_overlay"></span>
-                                        <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>{% trans 'STABILIZER STANDS' %}</span></p>
-                                        </div>
-                                    </a>
-                                </div>
-
-                            </div>
-
-                            <div class="col-md-4 col-sm-12 border-right">
-
-                                <div class="gallery-skin border-bottom">
-                                    <a class="thumb"
-                                       href="#"
-                                       data-gallery="5">
-                                        <img src="{% static 'images/catalog/cylinder_1.png' %}" alt="">
-                                        <span class="thumb_overlay"></span>
-                                        <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name">
-                                                <span>{% trans 'CLUTCH AND BRAKE CYLINDERS' %}</span></p>
-                                        </div>
-                                    </a>
-                                </div>
-
-                                <div class="gallery-skin border-bottom">
-                                    <a class="thumb"
-                                       href="#"
-                                       data-gallery="5">
-                                        <img src="{% static 'images/catalog/bracket_1.jpg' %}" alt="">
-                                        <span class="thumb_overlay"></span>
-                                        <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>{% trans 'BRACKET' %}</span></p>
-                                        </div>
-                                    </a>
-                                </div>
-
-                                <div class="gallery-skin border-bottom">
-                                    <a class="thumb"
-                                       href="#"
-                                       data-gallery="5">
-                                        <img src="{% static 'images/catalog/rubberbushing_1.jpg' %}" alt="">
-                                        <span class="thumb_overlay"></span>
-                                        <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>{% trans 'RUBBER BUSHINGS' %}</span></p>
-                                        </div>
-                                    </a>
-                                </div>
-
-                            </div>
-
-                            <div class="col-md-4 col-sm-12">
-
-                                <div class="gallery-skin border-bottom">
-                                    <a class="thumb "
-                                       href="#"
-                                       data-gallery="5">
-                                        <img src="{% static 'images/catalog/steeringtip_1.jpg' %}" alt="">
-                                        <span class="thumb_overlay"></span>
-                                        <div class="gallery_overlay">
-                                            <p class="brand_name heading-3"><span>HORT</span></p>
-                                            <p class="light brand_name"><span>{% trans 'STEERING TIPS' %}</span></p>
-                                        </div>
-                                    </a>
-                                </div>
-
-
-                            </div>
-
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-
         </div>
     </div>
 
@@ -436,10 +326,101 @@
                     </div>
                 </div>
 
+                <div class="brick folio-item">
+                    <div class="item-wrap animate-this"
+                         data-src="{% static 'images/catalog/starter_1.png' %}">
+                        <a href="belt/" class="overlay">
+                            <img src="{% static 'images/catalog/starter_1.png' %}">
+                            <div class="item-text">
+                                <span class="folio-types">HORT PARTS</span>
+                                <h3 class="folio-title">{% trans 'STARTERS' %}</h3>
+                            </div>
+                        </a>
+                        <a href="belt/" class="details-link" title="details">
+                            <i class="icon-link"></i>
+                        </a>
+                    </div>
+                </div>
 
+                <div class="brick folio-item">
+                    <div class="item-wrap animate-this"
+                         data-src="{% static 'images/catalog/stoyka_1.png' %}">
+                        <a href="belt/" class="overlay">
+                            <img src="{% static 'images/catalog/stoyka_1.png' %}">
+                            <div class="item-text">
+                                <span class="folio-types">HORT PARTS</span>
+                                <h3 class="folio-title">{% trans 'STABILIZER STANDS' %}</h3>
+                            </div>
+                        </a>
+                        <a href="belt/" class="details-link" title="details">
+                            <i class="icon-link"></i>
+                        </a>
+                    </div>
+                </div>
 
+                <div class="brick folio-item">
+                    <div class="item-wrap animate-this"
+                         data-src="{% static 'images/catalog/cylinder_1.png' %}">
+                        <a href="belt/" class="overlay">
+                            <img src="{% static 'images/catalog/cylinder_1.png' %}">
+                            <div class="item-text">
+                                <span class="folio-types">HORT PARTS</span>
+                                <h3 class="folio-title">{% trans 'CLUTCH AND BRAKE CYLINDERS' %}</h3>
+                            </div>
+                        </a>
+                        <a href="belt/" class="details-link" title="details">
+                            <i class="icon-link"></i>
+                        </a>
+                    </div>
+                </div>
 
+                <div class="brick folio-item">
+                    <div class="item-wrap animate-this"
+                         data-src="{% static 'images/catalog/bracket_1.jpg' %}">
+                        <a href="belt/" class="overlay">
+                            <img src="{% static 'images/catalog/bracket_1.jpg' %}">
+                            <div class="item-text">
+                                <span class="folio-types">HORT PARTS</span>
+                                <h3 class="folio-title">{% trans 'BRACKET' %}</h3>
+                            </div>
+                        </a>
+                        <a href="belt/" class="details-link" title="details">
+                            <i class="icon-link"></i>
+                        </a>
+                    </div>
+                </div>
 
+                <div class="brick folio-item">
+                    <div class="item-wrap animate-this"
+                         data-src="{% static 'images/catalog/rubberbushing_1.jpg' %}">
+                        <a href="belt/" class="overlay">
+                            <img src="{% static 'images/catalog/rubberbushing_1.jpg' %}">
+                            <div class="item-text">
+                                <span class="folio-types">HORT PARTS</span>
+                                <h3 class="folio-title">{% trans 'RUBBER BUSHINGS' %}</h3>
+                            </div>
+                        </a>
+                        <a href="belt/" class="details-link" title="details">
+                            <i class="icon-link"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="brick folio-item">
+                    <div class="item-wrap animate-this"
+                         data-src="{% static 'images/catalog/steeringtip_1.jpg' %}">
+                        <a href="belt/" class="overlay">
+                            <img src="{% static 'images/catalog/steeringtip_1.jpg' %}">
+                            <div class="item-text">
+                                <span class="folio-types">HORT PARTS</span>
+                                <h3 class="folio-title">{% trans 'STEERING TIPS' %}</h3>
+                            </div>
+                        </a>
+                        <a href="belt/" class="details-link" title="details">
+                            <i class="icon-link"></i>
+                        </a>
+                    </div>
+                </div>
 
             </div>
         </div>
