--- a/hort_parts/templates/hort_parts/product/download.html
+++ b/hort_parts/templates/hort_parts/product/download.html
@@ -1,11 +1,10 @@
-{% extends 'hort_parts/main.html' %}
+{% extends 'hort_parts/product/main.html' %}
 {% load static i18n hort_tag %}
 {% block  title_page %}
 <title>Hort - {% trans 'Download' %}</title>
 {% endblock title_page %}
 
-
-{% block content_page %}
+{% block product_page %}
 
 <div class="catalog-index">
 
@@ -364,4 +363,4 @@
 
 </div>
 
-{% endblock content_page %}
+{% endblock product_page %}
