--- a/hort_parts/templates/hort_parts/product/about.html
+++ b/hort_parts/templates/hort_parts/product/about.html
@@ -1,11 +1,10 @@
-{% extends 'hort_parts/main.html' %}
+{% extends 'hort_parts/product/main.html' %}
 {% load static i18n hort_tag %}
 {% block  title_page %}
 <title>Hort - {% trans 'About Us' %}</title>
 {% endblock title_page %}
 
+{% block product_page %}
 
-{% block content_page %}
 
-
-{% endblock content_page %}
+{% endblock product_page %}
