--- a/hort_parts/templates/hort_parts/product/about.html
+++ b/hort_parts/templates/hort_parts/product/about.html
@@ -6,5 +6,72 @@
 
 {% block product_page %}
 
+<div id="page-content">
+    <!--Page Title-->
+    <div class="page section-header text-center">
+        <div class="page-title">
+            <div class="wrapper"><h1 class="page-width">{% trans 'About Us' %}</h1></div>
+        </div>
+    </div>
+    <!--End Page Title-->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h2>Sed ut perspiciatis unde omnis iste natus error</h2>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, On
+                    the other hand, we denounce with righteous indignation and dislike men who are so beguiled and
+                    demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee
+                    the pain.</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 mb-4">
+                <h2 class="h2">About Annimex Web</h2>
+                <div class="rte-setting"><p><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</strong></p>
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+                        dicta sunt explicabo.</p>
+                    <p></p>
+                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                        deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
+                        provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et
+                        dolorum fuga.</p></div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                <h2 class="h2">Contact Us</h2>
+                <ul class="addressFooter">
+                    <li><i class="icon anm anm-map-marker-al"></i>
+                        <p>55 Gallaxy Enque, 2568 steet, 23568 NY</p></li>
+                    <li class="phone"><i class="icon anm anm-phone-s"></i>
+                        <p>(440) 000 000 0000</p></li>
+                    <li class="email"><i class="icon anm anm-envelope-l"></i>
+                        <p>sales@yousite.com</p></li>
+                </ul>
+                <hr/>
+                <ul class="list--inline site-footer__social-icons social-icons">
+                    <li><a class="social-icons__link" href="#" target="_blank"
+                           title="Belle Multipurpose Bootstrap 4 Template on Facebook"><i
+                            class="icon icon-facebook"></i></a></li>
+                    <li><a class="social-icons__link" href="#" target="_blank"
+                           title="Belle Multipurpose Bootstrap 4 Template on Twitter"><i class="icon icon-twitter"></i>
+                        <span class="icon__fallback-text">Twitter</span></a></li>
+                    <li><a class="social-icons__link" href="#" target="_blank"
+                           title="Belle Multipurpose Bootstrap 4 Template on Instagram"><i
+                            class="icon icon-instagram"></i> <span class="icon__fallback-text">Instagram</span></a></li>
+                    <li><a class="social-icons__link" href="#" target="_blank"
+                           title="Belle Multipurpose Bootstrap 4 Template on YouTube"><i class="icon icon-youtube"></i>
+                        <span class="icon__fallback-text">YouTube</span></a></li>
+                </ul>
+            </div>
+        </div>
+
+
+    </div>
+
+</div>
 
 {% endblock product_page %}
