--- a/hort_parts/templates/hort_parts/product/download.html
+++ b/hort_parts/templates/hort_parts/product/download.html
@@ -1,10 +1,21 @@
 {% extends 'hort_parts/product/main.html' %}
 {% load static i18n hort_tag %}
 {% block  title_page %}
-<title>Hort - {% trans 'Download' %}</title>
+<title>Hort - {% trans 'Download Materials' %}</title>
 {% endblock title_page %}
 
 {% block product_page %}
+
+<div id="page-content">
+    <!--Page Title-->
+    <div class="page section-header text-center">
+        <div class="page-title">
+            <div class="wrapper"><h1 class="page-width">{% trans 'Download Materials' %}</h1></div>
+        </div>
+    </div>
+    <!--End Page Title-->
+
+</div>
 
 <div class="catalog-index">
 
